name:                app
version:             0.1.0.0
synopsis:            dplusic.github.io
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:
    Main.hs
  build-depends:
    base,
    containers,
    ghcjs-base,
    text,
    aeson,
    raw-strings-qq,
    miso
  default-language:
    Haskell2010
